tests/reject/wrongReturn.emojic
🐇 🐟 🍇
  🔑 🐈 🆕 🍇🍉

  🐖 🙋 ➡️ 🚂 🍇
    🍎 2.2331
  🍉
🍉

🏁 🍇
  🍦 fish 🔷🐟🆕
  🙋 fish
🍉
